# frappe-powertools

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: academic_service_request_queries.py
src/frappe_powertools/: __init__.py  _method_chain.py
src/frappe_powertools/commands/: __init__.py  cli.py  generate_models.py
src/frappe_powertools/config/: __init__.py  _app_config.py  _casters.py  _frappe_adapter.py  _reader.py  _repository.py  _testing.py  _types.py
src/frappe_powertools/doctype_schema/: __init__.py  schema.py
src/frappe_powertools/listeners/: _listener_utils.py  change_listeners.py  listener_mixins.py
src/frappe_powertools/orm/: __init__.py  query.py
src/frappe_powertools/transaction/: __init__.py  atomic.py  hooks.py  state.py  testing.py
src/frappe_powertools/workbook/: __init__.py  core.py  frappe.py
tests/: test_pydantic_schema.py  test_validate_on_change.py
tests/commands/: __init__.py  test_generate_models_core.py  test_generate_models_integration.py
tests/config/: test_app_config.py  test_casters.py  test_reader.py  test_testing.py  test_types.py
tests/orm/: __init__.py  test_docmodel_basic.py  test_docmodel_schema_integration.py  test_orm_manager.py  test_q_objects.py  test_readquery_child_prefetch.py  test_readquery_core.py  test_readquery_frappe_integration.py  test_readquery_select_related.py
tests/transaction/: test_atomic_basic.py  test_atomic_managed.py  test_hooks.py  test_savepoints.py  test_state.py  test_testing_helpers.py  test_transaction_api.py
tests/workbook/: __init__.py  test_auto_detection.py  test_core.py  test_csv.py  test_frappe.py  test_xlsx.py
