[project]
name = "frappe-powertools"
version = "0.0.1b1"
description = "Practical utilities, decorators, and hooks for Frappe developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "0xsirsaif", email = "muhamed.e.saif@gmail.com" },
]
dependencies = [
	"pydantic>=2.3,<3",
  	"openpyxl>=3.1.2,<4",
]

[project.optional-dependencies]
# Reserved for future groups, e.g., "ops", "sql", "logging"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"pytest",
	"ruff",
	"pytest-cov",
	"mypy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
