[project]
name = "frappe-powertools"
version = "0.0.1b1"
description = "Practical utilities, decorators, and hooks for Frappe developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
	{ name = "0xsirsaif", email = "muhamed.e.saif@gmail.com" },
]
dependencies = [
	"pydantic>=2.3,<3",
  	"openpyxl>=3.1.2,<4",
]

[project.optional-dependencies]
# Reserved for future groups, e.g., "ops", "sql", "logging"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"pytest",
	"ruff",
	"pytest-cov",
	"ty",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ty.environment]
python-version = "3.10"

[tool.ty.analysis]
replace-imports-with-any = [
	"frappe.**",
	"openpyxl.**",
	"click.**",
]

[tool.pytest.ini_options]
addopts = "-q"
